--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
     <title>My Hilarious Self-Intro</title>
+      <script>
+    // Function to simulate 500 error
+    function simulateServerError() {
+      setTimeout(function() {
+        document.getElementById("error-message").style.display = "none";
+        document.getElementById("self-intro").style.display = "block";
+      }, 3000);
+    }
+  </script>
 </head>
 <body>
     <header>
