--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     }
   </script>
 </head>
-<body>
+<body onload="simulateServerError()">
+  <h1 id="error-message">500 Internal Server Error</h1>
     <header>
         <h1>Hello, I'm the 200 OK-tastic Web Dev!</h1>
     </header>
