--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body onload="simulateServerError()">
   <h1 id="error-message">500 Internal Server Error</h1>
+      <div id="self-intro" style="display: none;">
+
     <header>
         <h1>Hello, I'm the 200 OK-tastic Web Dev!</h1>
     </header>
@@ -57,5 +59,6 @@
     <footer>
         <p>© 2023 Web Dev Wizard. All rights cracked up!</p>
     </footer>
+    </div>
 </body>
 </html>
