--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <body onload="simulateServerError()">
   <h1 id="error-message">500 Internal Server Error</h1>
   <div id="self-intro" style="display: none;">
-    <h1>Hello, I'm [Your Name]!</h1>
-    <p>Welcome to my GitHub.io page. I'm a web developer with a passion for coding and creating innovative web solutions. With expertise in [Your Skills], I strive to make the internet a better place through my creative and functional web designs. Feel free to explore my projects and get in touch with me for collaboration opportunities!</p>
+    <h1>200 Ok</h1>
+    <h2>Elon인 이유: 먼가 한글 기준 3글자 안넘어가는거 찾다보니...</h2>
+    <h2>취미: 독서</h2>
+    <h2>특기: 잡지식</h2>
+
   </div>
   <h1 id="not-found" style="display: none;">404 Not Found</h1>
 </body>
