--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     function simulateServerError() {
       setTimeout(function() {
         document.getElementById("error-message").style.display = "none";
-        document.getElementById("not-found").style.display = "block";
+        document.getElementById("self-intro").style.display = "block";
         setTimeout(function() {
           document.getElementById("self-intro").style.display = "none";
-          document.getElementById("error-message").style.display = "none";
-        }, 30000);
+          document.getElementById("not-found").style.display = "block";
+        }, 20000);
       }, 3000);
     }
   </script>
