--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <h1>200 Ok</h1>
     <h2>Elon인 이유: 먼가 한글 기준 3글자 안넘어가는거 찾다보니...</h2>
     <h2>취미: 독서</h2>
-    <h2>특기: 잡지식</h2>
+    <h2>TMI: 잡지식 많음, 밥양 조절 가능, 스킨스쿠바 오픈워터 자격증 보유, 더위도 추위도 잘안탐, 생존을 위해 운동함, 존윅4 곧 볼 예정, 데이비드 호크니전 기대중 </h2>
 
   </div>
-  <h1 id="not-found" style="display: none;">404 Not Found</h1>
+  <h1 id="not-found" style="display: none;">504 Gateway Timeout</h1>
 </body>
 </html>
